debug: Debug .osx script stat

--- a/tasks/osx.yml
+++ b/tasks/osx.yml
@@ -1,5 +1,13 @@
 ---
 # TODO: Use sudo once .osx can be run via root with no user interaction.
+- name: Test .osx
+  stat:
+    path: "{{ osx_script }}"
+  register: osx_st
+- name: Debug osx stat
+  debug:
+    var: osx_st
+    verbosity: 2
 - name: Run .osx dotfiles.
   command: "{{ osx_script }}"
   changed_when: false
