test role from github

--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,7 @@
 roles:
   - name: elliotweiser.osx-command-line-tools
   - name: geerlingguy.dotfiles
+    src: https://github.com/geerlingguy/ansible-role-dotfiles.git
 
 collections:
   - name: geerlingguy.mac
