--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
 roles:
   - name: elliotweiser.osx-command-line-tools
-  - name: geerlingguy.dotfiles
-    src: git+https://github.com/geerlingguy/ansible-role-dotfiles.git
+  - name: yjqpro.dotfiles
+    src: git+https://github.com/yjqpro/ansible-role-dotfiles.git
     version: 1.2.1
 
 collections:
