update default brew packages

--- a/default.config.yml
+++ b/default.config.yml
@@ -35,44 +35,209 @@ dotfiles_files:
 
 homebrew_installed_packages:
   # - ansible # Installed via Pip.
+  - aom
+  - apr
+  - apr-util
+  - argon2
+  - aspell
   - autoconf
   - bash-completion
+  - bdw-gc
   - bison
-  - ccls
+  - boost
+  - brotli
+  - c-ares
+  - ca-certificates
+  - cairo
+  - cjson
+  - clang-format
   - cmake
+  - cmocka
   - cowsay
+  - curl
+  - dav1d
+  - dbus
   - doxygen
   - efm-langserver
+  - ffmpeg
+  - ffmpeg@4
+  - flac
+  - fontconfig
+  - freetds
+  - freetype
+  - frei0r
+  - fribidi
+  - gd
   - gdb
+  - gdbm
+  - gettext
+  - giflib
   - gifsicle
   - git
-  - pkg-config
+  - glib
+  - gmp
   - gnupg
+  - gnutls
   - go
+  - gobject-introspection
+  - graphite2
+  - guile
+  - harfbuzz
   - httpie
+  - hugo
+  - icu4c
+  - imath
+  - innoextract
   - iperf
+  - jemalloc
+  - jpeg
+  - jpeg-xl
+  - jq
+  - krb5
+  - kubernetes-cli
+  - kustomize
+  - lame
+  - lazygit
+  - leptonica
+  - lf
+  - libarchive
+  - libass
+  - libassuan
+  - libavif
+  - libb2
+  - libbluray
+  - libev
+  - libevent
+  - libffi
+  - libgcrypt
+  - libgpg-error
+  - libidn2
+  - libksba
+  - libnghttp2
+  - libogg
+  - libpng
+  - libpq
+  - libpthread-stubs
+  - librist
+  - libsamplerate
+  - libsndfile
+  - libsodium
+  - libsoxr
+  - libssh2
+  - libtasn1
+  - libtermkey
+  - libtiff
+  - libtool
+  - libunistring
+  - libusb
+  - libuv
+  - libvidstab
+  - libvmaf
+  - libvorbis
+  - libvpx
+  - libx11
+  - libxau
+  - libxcb
+  - libxdmcp
+  - libxext
+  - libxrender
+  - libyaml
+  - libzip
+  - little-cms2
+  - llvm
   - lua
+  - lua-language-server
   - luajit
+  - luajit-openresty
   - luarocks
+  - luv
+  - lz4
+  - lzo
+  - m4
   - mas
+  - mbedtls
   - mcrypt
+  - mhash
+  - minikube
+  - moreutils
+  - mpdecimal
+  - msgpack
+  - ncurses
   - neovim
+  - nettle
   - nghttp2
   - ninja
   - nmap
   - node
-  - nvm
+  - node@16
+  - npth
+  - oniguruma
+  - opencore-amr
+  - openexr
+  - openjpeg
+  - openldap
+  - openssl@1.1
   - openssl@3
+  - opus
+  - p11-kit
+  - p7zip
+  - pcre
+  - pcre2
   - php
+  - pinentry
+  - pipx
+  - pixman
+  - pkg-config
+  - prettier
   - pv
+  - python@3.10
   - python@3.9
+  - rav1e
+  - rbenv
+  - readline
   - ripgrep
+  - rtmpdump
+  - rubberband
+  - ruby-build
+  - rust
+  - scrcpy
+  - sdl2
+  - sevenzip
+  - six
+  - smartmontools
+  - snappy
+  - speex
+  - sqlite
+  - srt
   - ssh-copy-id
+  - stylua
+  - subversion
+  - tcping
+  - telnet
+  - tesseract
+  - theora
+  - tidy-html5
   - tmux
+  - tree-sitter
+  - unbound
+  - unibilium
+  - unixodbc
+  - unshield
+  - utf8proc
+  - webp
   - wget
   - wrk
+  - x264
+  - x265
+  - xorgproto
+  - xvid
+  - xz
   - yamllint
+  - you-get
+  - zeromq
+  - zimg
   - zsh-history-substring-search
+  - zstd
 
 homebrew_taps:
   - github/gh
@@ -84,13 +249,14 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - alfred
+  - android-platform-tools
   - appcleaner
   - baidunetdisk
   - beyond-compare
   - chromedriver
   - dash
-  - docker
   - dropbox
+  - font-caskaydia-cove-nerd-font
   - font-jetbrains-mono-nerd-font
   - go2shell
   - google-chrome
@@ -100,6 +266,8 @@ homebrew_cask_apps:
   - kitty
   - licecap
   - macvim
+  - michaelvillar-timer
+  - mumu
   - oracle-jdk
   - pdf-expert
   - scatter
@@ -109,7 +277,6 @@ homebrew_cask_apps:
   - squirrel
   - telegram-desktop
   - the-unarchiver
-  - virtualbox
   - yinxiangbiji
   - youdaodict
 
