--- a/default.config.yml
+++ b/default.config.yml
@@ -91,8 +91,7 @@ homebrew_cask_apps:
   - youdaodict
 
 # See `geerlingguy.mas` role documentation for usage instructions.
-mas_installed_apps:
-  - { id: 441258766, name: "Magnet"}
+mas_installed_apps: []
 mas_email: ""
 mas_password: ""
 
